project('krkrsdl2', ['c', 'cpp'], default_options: ['optimization=3', 'debug=true', 'warning_level=1'], version: 'unknown')

cxx = meson.get_compiler('cpp')
host_system = host_machine.system()

sdl2_dep = dependency('sdl2', method: 'auto')

krkrsdl2_src = [
	'external/krkrz/base/BinaryStream.cpp',
	'external/krkrz/base/CharacterSet.cpp',
	'external/krkrz/base/EventIntf.cpp',
	'external/krkrz/base/PluginIntf.cpp',
	'external/krkrz/base/ScriptMgnIntf.cpp',
	'external/krkrz/base/StorageIntf.cpp',
	'external/krkrz/base/SysInitIntf.cpp',
	'external/krkrz/base/SystemIntf.cpp',
	'external/krkrz/base/TextStream.cpp',
	'external/krkrz/base/UtilStreams.cpp',
	'external/krkrz/base/XP3Archive.cpp',
	'external/krkrz/base/stub/FileSelector.cpp',
	'external/krkrz/base/stub/ScriptMgnImpl.cpp',
	'external/krkrz/base/win32/EventImpl.cpp',
	'external/krkrz/extension/Extension.cpp',
	'external/krkrz/msg/MsgIntf.cpp',
	'external/krkrz/msg/win32/MsgImpl.cpp',
	'external/krkrz/sound/MathAlgorithms.cpp',
	'external/krkrz/sound/OpusCodecDecoder.cpp',
	'external/krkrz/sound/PhaseVocoderDSP.cpp',
	'external/krkrz/sound/PhaseVocoderFilter.cpp',
	'external/krkrz/sound/RealFFT.cpp',
	'external/krkrz/sound/SoundBufferBaseImpl.cpp',
	'external/krkrz/sound/SoundBufferBaseIntf.cpp',
	'external/krkrz/sound/WaveFormatConverter.cpp',
	'external/krkrz/sound/WaveIntf.cpp',
	'external/krkrz/sound/WaveLoopManager.cpp',
	'external/krkrz/sound/WaveSegmentQueue.cpp',
	'external/krkrz/sound/win32/WaveImpl.cpp',
	'external/krkrz/tjs2/tjs.cpp',
	'external/krkrz/tjs2/tjs.tab.cpp',
	'external/krkrz/tjs2/tjsArray.cpp',
	'external/krkrz/tjs2/tjsBinarySerializer.cpp',
	'external/krkrz/tjs2/tjsByteCodeLoader.cpp',
	'external/krkrz/tjs2/tjsCompileControl.cpp',
	'external/krkrz/tjs2/tjsConfig.cpp',
	'external/krkrz/tjs2/tjsConstArrayData.cpp',
	'external/krkrz/tjs2/tjsDate.cpp',
	'external/krkrz/tjs2/tjsDateParser.cpp',
	'external/krkrz/tjs2/tjsDebug.cpp',
	'external/krkrz/tjs2/tjsDictionary.cpp',
	'external/krkrz/tjs2/tjsDisassemble.cpp',
	'external/krkrz/tjs2/tjsError.cpp',
	'external/krkrz/tjs2/tjsException.cpp',
	'external/krkrz/tjs2/tjsGlobalStringMap.cpp',
	'external/krkrz/tjs2/tjsInterCodeExec.cpp',
	'external/krkrz/tjs2/tjsInterCodeGen.cpp',
	'external/krkrz/tjs2/tjsInterface.cpp',
	'external/krkrz/tjs2/tjsLex.cpp',
	'external/krkrz/tjs2/tjsMT19937ar-cok.cpp',
	'external/krkrz/tjs2/tjsMath.cpp',
	'external/krkrz/tjs2/tjsMessage.cpp',
	'external/krkrz/tjs2/tjsNamespace.cpp',
	'external/krkrz/tjs2/tjsNative.cpp',
	'external/krkrz/tjs2/tjsObject.cpp',
	'external/krkrz/tjs2/tjsObjectExtendable.cpp',
	'external/krkrz/tjs2/tjsOctPack.cpp',
	'external/krkrz/tjs2/tjsRandomGenerator.cpp',
	'external/krkrz/tjs2/tjsRegExp.cpp',
	'external/krkrz/tjs2/tjsScriptBlock.cpp',
	'external/krkrz/tjs2/tjsScriptCache.cpp',
	'external/krkrz/tjs2/tjsSnprintf.cpp',
	'external/krkrz/tjs2/tjsString.cpp',
	'external/krkrz/tjs2/tjsUtils.cpp',
	'external/krkrz/tjs2/tjsVariant.cpp',
	'external/krkrz/tjs2/tjsVariantString.cpp',
	'external/krkrz/tjs2/tjsdate.tab.cpp',
	'external/krkrz/tjs2/tjspp.tab.cpp',
	'external/krkrz/utils/ClipboardIntf.cpp',
	'external/krkrz/utils/DebugIntf.cpp',
	'external/krkrz/utils/MiscUtility.cpp',
	'external/krkrz/utils/Random.cpp',
	'external/krkrz/utils/TVPTimer.cpp',
	'external/krkrz/utils/ThreadIntf.cpp',
	'external/krkrz/utils/TickCount.cpp',
	'external/krkrz/utils/TimerIntf.cpp',
	'external/krkrz/utils/TimerThread.cpp',
	'external/krkrz/utils/VelocityTracker.cpp',
	'external/krkrz/utils/cp932_uni.cpp',
	'external/krkrz/utils/md5.c',
	'external/krkrz/utils/uni_cp932.cpp',
	'external/krkrz/utils/win32/ClipboardImpl.cpp',
	'external/krkrz/visual/BitmapIntf.cpp',
	'external/krkrz/visual/BitmapLayerTreeOwner.cpp',
	'external/krkrz/visual/CharacterData.cpp',
	'external/krkrz/visual/ComplexRect.cpp',
	'external/krkrz/visual/DrawDevice.cpp',
	'external/krkrz/visual/FontSystem.cpp',
	'external/krkrz/visual/FreeType.cpp',
	'external/krkrz/visual/FreeTypeFontRasterizer.cpp',
	'external/krkrz/visual/GraphicsLoadThread.cpp',
	'external/krkrz/visual/GraphicsLoaderIntf.cpp',
	'external/krkrz/visual/ImageFunction.cpp',
	'external/krkrz/visual/LayerBitmapImpl.cpp',
	'external/krkrz/visual/LayerBitmapIntf.cpp',
	'external/krkrz/visual/LayerIntf.cpp',
	'external/krkrz/visual/LayerManager.cpp',
	'external/krkrz/visual/LayerTreeOwnerImpl.cpp',
	'external/krkrz/visual/LoadJPEG.cpp',
	'external/krkrz/visual/LoadPNG.cpp',
	'external/krkrz/visual/LoadTLG.cpp',
	'external/krkrz/visual/NullDrawDevice.cpp',
	'external/krkrz/visual/PrerenderedFont.cpp',
	'external/krkrz/visual/RectItf.cpp',
	'external/krkrz/visual/SaveTLG5.cpp',
	'external/krkrz/visual/SaveTLG6.cpp',
	'external/krkrz/visual/TransIntf.cpp',
	'external/krkrz/visual/VideoOvlIntf.cpp',
	'external/krkrz/visual/WindowIntf.cpp',
	'external/krkrz/visual/gl/ResampleImage.cpp',
	'external/krkrz/visual/gl/WeightFunctor.cpp',
	'external/krkrz/visual/gl/blend_function.cpp',
	'external/krkrz/visual/tvpgl.c',
	'external/krkrz/visual/win32/BasicDrawDevice.cpp',
	'external/krkrz/visual/win32/BitmapBitsAlloc.cpp',
	'external/krkrz/visual/win32/BitmapInfomation.cpp',
	'external/krkrz/visual/win32/GraphicsLoaderImpl.cpp',
	'external/krkrz/visual/win32/LayerImpl.cpp',
	'external/krkrz/visual/win32/TVPScreen.cpp',
	'external/krkrz/visual/win32/VideoOvlImpl.cpp',
	'external/krkrz/visual/win32/WindowImpl.cpp',
	'external/krkrz/external/freetype/builds/windows/ftdebug.c',
	'external/krkrz/external/freetype/src/autofit/autofit.c',
	'external/krkrz/external/freetype/src/base/ftbase.c',
	'external/krkrz/external/freetype/src/base/ftbbox.c',
	'external/krkrz/external/freetype/src/base/ftbitmap.c',
	'external/krkrz/external/freetype/src/base/ftfntfmt.c',
	'external/krkrz/external/freetype/src/base/ftfstype.c',
	'external/krkrz/external/freetype/src/base/ftgasp.c',
	'external/krkrz/external/freetype/src/base/ftglyph.c',
	'external/krkrz/external/freetype/src/base/ftgxval.c',
	'external/krkrz/external/freetype/src/base/ftinit.c',
	'external/krkrz/external/freetype/src/base/ftlcdfil.c',
	'external/krkrz/external/freetype/src/base/ftmm.c',
	'external/krkrz/external/freetype/src/base/ftotval.c',
	'external/krkrz/external/freetype/src/base/ftpatent.c',
	'external/krkrz/external/freetype/src/base/ftpfr.c',
	'external/krkrz/external/freetype/src/base/ftstroke.c',
	'external/krkrz/external/freetype/src/base/ftsynth.c',
	'external/krkrz/external/freetype/src/base/ftsystem.c',
	'external/krkrz/external/freetype/src/base/fttype1.c',
	'external/krkrz/external/freetype/src/base/ftwinfnt.c',
	'external/krkrz/external/freetype/src/bdf/bdf.c',
	'external/krkrz/external/freetype/src/cache/ftcache.c',
	'external/krkrz/external/freetype/src/cff/cff.c',
	'external/krkrz/external/freetype/src/cid/type1cid.c',
	'external/krkrz/external/freetype/src/gzip/ftgzip.c',
	'external/krkrz/external/freetype/src/lzw/ftlzw.c',
	'external/krkrz/external/freetype/src/pcf/pcf.c',
	'external/krkrz/external/freetype/src/pfr/pfr.c',
	'external/krkrz/external/freetype/src/psaux/psaux.c',
	'external/krkrz/external/freetype/src/pshinter/pshinter.c',
	'external/krkrz/external/freetype/src/psnames/psmodule.c',
	'external/krkrz/external/freetype/src/raster/raster.c',
	'external/krkrz/external/freetype/src/sfnt/sfnt.c',
	'external/krkrz/external/freetype/src/smooth/smooth.c',
	'external/krkrz/external/freetype/src/truetype/truetype.c',
	'external/krkrz/external/freetype/src/type1/type1.c',
	'external/krkrz/external/freetype/src/type42/type42.c',
	'external/krkrz/external/freetype/src/winfonts/winfnt.c',
	'external/krkrz/external/libjpeg-turbo/jaricom.c',
	'external/krkrz/external/libjpeg-turbo/jcapimin.c',
	'external/krkrz/external/libjpeg-turbo/jcapistd.c',
	'external/krkrz/external/libjpeg-turbo/jcarith.c',
	'external/krkrz/external/libjpeg-turbo/jccoefct.c',
	'external/krkrz/external/libjpeg-turbo/jccolor.c',
	'external/krkrz/external/libjpeg-turbo/jcdctmgr.c',
	'external/krkrz/external/libjpeg-turbo/jchuff.c',
	'external/krkrz/external/libjpeg-turbo/jcinit.c',
	'external/krkrz/external/libjpeg-turbo/jcmainct.c',
	'external/krkrz/external/libjpeg-turbo/jcmarker.c',
	'external/krkrz/external/libjpeg-turbo/jcmaster.c',
	'external/krkrz/external/libjpeg-turbo/jcomapi.c',
	'external/krkrz/external/libjpeg-turbo/jcparam.c',
	'external/krkrz/external/libjpeg-turbo/jcphuff.c',
	'external/krkrz/external/libjpeg-turbo/jcprepct.c',
	'external/krkrz/external/libjpeg-turbo/jcsample.c',
	'external/krkrz/external/libjpeg-turbo/jctrans.c',
	'external/krkrz/external/libjpeg-turbo/jdapimin.c',
	'external/krkrz/external/libjpeg-turbo/jdapistd.c',
	'external/krkrz/external/libjpeg-turbo/jdarith.c',
	'external/krkrz/external/libjpeg-turbo/jdatadst-tj.c',
	'external/krkrz/external/libjpeg-turbo/jdatadst.c',
	'external/krkrz/external/libjpeg-turbo/jdatasrc-tj.c',
	'external/krkrz/external/libjpeg-turbo/jdatasrc.c',
	'external/krkrz/external/libjpeg-turbo/jdcoefct.c',
	'external/krkrz/external/libjpeg-turbo/jdcolor.c',
	'external/krkrz/external/libjpeg-turbo/jddctmgr.c',
	'external/krkrz/external/libjpeg-turbo/jdhuff.c',
	'external/krkrz/external/libjpeg-turbo/jdinput.c',
	'external/krkrz/external/libjpeg-turbo/jdmainct.c',
	'external/krkrz/external/libjpeg-turbo/jdmarker.c',
	'external/krkrz/external/libjpeg-turbo/jdmaster.c',
	'external/krkrz/external/libjpeg-turbo/jdmerge.c',
	'external/krkrz/external/libjpeg-turbo/jdphuff.c',
	'external/krkrz/external/libjpeg-turbo/jdpostct.c',
	'external/krkrz/external/libjpeg-turbo/jdsample.c',
	'external/krkrz/external/libjpeg-turbo/jdtrans.c',
	'external/krkrz/external/libjpeg-turbo/jerror.c',
	'external/krkrz/external/libjpeg-turbo/jfdctflt.c',
	'external/krkrz/external/libjpeg-turbo/jfdctfst.c',
	'external/krkrz/external/libjpeg-turbo/jfdctint.c',
	'external/krkrz/external/libjpeg-turbo/jidctflt.c',
	'external/krkrz/external/libjpeg-turbo/jidctfst.c',
	'external/krkrz/external/libjpeg-turbo/jidctint.c',
	'external/krkrz/external/libjpeg-turbo/jidctred.c',
	'external/krkrz/external/libjpeg-turbo/jmemmgr.c',
	'external/krkrz/external/libjpeg-turbo/jmemnobs.c',
	'external/krkrz/external/libjpeg-turbo/jquant1.c',
	'external/krkrz/external/libjpeg-turbo/jquant2.c',
	'external/krkrz/external/libjpeg-turbo/jsimd_none.c',
	'external/krkrz/external/libjpeg-turbo/jutils.c',
	'external/krkrz/external/libjpeg-turbo/transupp.c',
	'external/krkrz/external/libjpeg-turbo/turbojpeg.c',
	'external/krkrz/external/libogg/src/bitwise.c',
	'external/krkrz/external/libogg/src/framing.c',
	'external/krkrz/external/lpng/png.c',
	'external/krkrz/external/lpng/pngerror.c',
	'external/krkrz/external/lpng/pngget.c',
	'external/krkrz/external/lpng/pngmem.c',
	'external/krkrz/external/lpng/pngpread.c',
	'external/krkrz/external/lpng/pngread.c',
	'external/krkrz/external/lpng/pngrio.c',
	'external/krkrz/external/lpng/pngrtran.c',
	'external/krkrz/external/lpng/pngrutil.c',
	'external/krkrz/external/lpng/pngset.c',
	'external/krkrz/external/lpng/pngtrans.c',
	'external/krkrz/external/lpng/pngwio.c',
	'external/krkrz/external/lpng/pngwrite.c',
	'external/krkrz/external/lpng/pngwtran.c',
	'external/krkrz/external/lpng/pngwutil.c',
	'external/krkrz/external/onig/src/ascii.c',
	'external/krkrz/external/onig/src/big5.c',
	'external/krkrz/external/onig/src/cp1251.c',
	'external/krkrz/external/onig/src/euc_jp.c',
	'external/krkrz/external/onig/src/euc_jp_prop.c',
	'external/krkrz/external/onig/src/euc_kr.c',
	'external/krkrz/external/onig/src/euc_tw.c',
	'external/krkrz/external/onig/src/gb18030.c',
	'external/krkrz/external/onig/src/iso8859_1.c',
	'external/krkrz/external/onig/src/iso8859_10.c',
	'external/krkrz/external/onig/src/iso8859_11.c',
	'external/krkrz/external/onig/src/iso8859_13.c',
	'external/krkrz/external/onig/src/iso8859_14.c',
	'external/krkrz/external/onig/src/iso8859_15.c',
	'external/krkrz/external/onig/src/iso8859_16.c',
	'external/krkrz/external/onig/src/iso8859_2.c',
	'external/krkrz/external/onig/src/iso8859_3.c',
	'external/krkrz/external/onig/src/iso8859_4.c',
	'external/krkrz/external/onig/src/iso8859_5.c',
	'external/krkrz/external/onig/src/iso8859_6.c',
	'external/krkrz/external/onig/src/iso8859_7.c',
	'external/krkrz/external/onig/src/iso8859_8.c',
	'external/krkrz/external/onig/src/iso8859_9.c',
	'external/krkrz/external/onig/src/koi8_r.c',
	'external/krkrz/external/onig/src/onig_init.c',
	'external/krkrz/external/onig/src/regcomp.c',
	'external/krkrz/external/onig/src/regenc.c',
	'external/krkrz/external/onig/src/regerror.c',
	'external/krkrz/external/onig/src/regexec.c',
	'external/krkrz/external/onig/src/regext.c',
	'external/krkrz/external/onig/src/reggnu.c',
	'external/krkrz/external/onig/src/regparse.c',
	'external/krkrz/external/onig/src/regposerr.c',
	'external/krkrz/external/onig/src/regposix.c',
	'external/krkrz/external/onig/src/regsyntax.c',
	'external/krkrz/external/onig/src/regtrav.c',
	'external/krkrz/external/onig/src/regversion.c',
	'external/krkrz/external/onig/src/sjis.c',
	'external/krkrz/external/onig/src/sjis_prop.c',
	'external/krkrz/external/onig/src/st.c',
	'external/krkrz/external/onig/src/unicode.c',
	'external/krkrz/external/onig/src/unicode_fold1_key.c',
	'external/krkrz/external/onig/src/unicode_fold2_key.c',
	'external/krkrz/external/onig/src/unicode_fold3_key.c',
	'external/krkrz/external/onig/src/unicode_unfold_key.c',
	'external/krkrz/external/onig/src/utf16_be.c',
	'external/krkrz/external/onig/src/utf16_le.c',
	'external/krkrz/external/onig/src/utf32_be.c',
	'external/krkrz/external/onig/src/utf32_le.c',
	'external/krkrz/external/onig/src/utf8.c',
	'external/krkrz/external/opus/celt/bands.c',
	'external/krkrz/external/opus/celt/celt.c',
	'external/krkrz/external/opus/celt/celt_decoder.c',
	'external/krkrz/external/opus/celt/celt_encoder.c',
	'external/krkrz/external/opus/celt/celt_lpc.c',
	'external/krkrz/external/opus/celt/cwrs.c',
	'external/krkrz/external/opus/celt/entcode.c',
	'external/krkrz/external/opus/celt/entdec.c',
	'external/krkrz/external/opus/celt/entenc.c',
	'external/krkrz/external/opus/celt/kiss_fft.c',
	'external/krkrz/external/opus/celt/laplace.c',
	'external/krkrz/external/opus/celt/mathops.c',
	'external/krkrz/external/opus/celt/mdct.c',
	'external/krkrz/external/opus/celt/modes.c',
	'external/krkrz/external/opus/celt/pitch.c',
	'external/krkrz/external/opus/celt/quant_bands.c',
	'external/krkrz/external/opus/celt/rate.c',
	'external/krkrz/external/opus/celt/vq.c',
	'external/krkrz/external/opus/silk/A2NLSF.c',
	'external/krkrz/external/opus/silk/CNG.c',
	'external/krkrz/external/opus/silk/HP_variable_cutoff.c',
	'external/krkrz/external/opus/silk/LPC_analysis_filter.c',
	'external/krkrz/external/opus/silk/LPC_inv_pred_gain.c',
	'external/krkrz/external/opus/silk/LP_variable_cutoff.c',
	'external/krkrz/external/opus/silk/NLSF2A.c',
	'external/krkrz/external/opus/silk/NLSF_VQ.c',
	'external/krkrz/external/opus/silk/NLSF_VQ_weights_laroia.c',
	'external/krkrz/external/opus/silk/NLSF_decode.c',
	'external/krkrz/external/opus/silk/NLSF_del_dec_quant.c',
	'external/krkrz/external/opus/silk/NLSF_encode.c',
	'external/krkrz/external/opus/silk/NLSF_stabilize.c',
	'external/krkrz/external/opus/silk/NLSF_unpack.c',
	'external/krkrz/external/opus/silk/NSQ.c',
	'external/krkrz/external/opus/silk/NSQ_del_dec.c',
	'external/krkrz/external/opus/silk/PLC.c',
	'external/krkrz/external/opus/silk/VAD.c',
	'external/krkrz/external/opus/silk/VQ_WMat_EC.c',
	'external/krkrz/external/opus/silk/ana_filt_bank_1.c',
	'external/krkrz/external/opus/silk/biquad_alt.c',
	'external/krkrz/external/opus/silk/bwexpander.c',
	'external/krkrz/external/opus/silk/bwexpander_32.c',
	'external/krkrz/external/opus/silk/check_control_input.c',
	'external/krkrz/external/opus/silk/code_signs.c',
	'external/krkrz/external/opus/silk/control_SNR.c',
	'external/krkrz/external/opus/silk/control_audio_bandwidth.c',
	'external/krkrz/external/opus/silk/control_codec.c',
	'external/krkrz/external/opus/silk/debug.c',
	'external/krkrz/external/opus/silk/dec_API.c',
	'external/krkrz/external/opus/silk/decode_core.c',
	'external/krkrz/external/opus/silk/decode_frame.c',
	'external/krkrz/external/opus/silk/decode_indices.c',
	'external/krkrz/external/opus/silk/decode_parameters.c',
	'external/krkrz/external/opus/silk/decode_pitch.c',
	'external/krkrz/external/opus/silk/decode_pulses.c',
	'external/krkrz/external/opus/silk/decoder_set_fs.c',
	'external/krkrz/external/opus/silk/enc_API.c',
	'external/krkrz/external/opus/silk/encode_indices.c',
	'external/krkrz/external/opus/silk/encode_pulses.c',
	'external/krkrz/external/opus/silk/float/LPC_analysis_filter_FLP.c',
	'external/krkrz/external/opus/silk/float/LPC_inv_pred_gain_FLP.c',
	'external/krkrz/external/opus/silk/float/LTP_analysis_filter_FLP.c',
	'external/krkrz/external/opus/silk/float/LTP_scale_ctrl_FLP.c',
	'external/krkrz/external/opus/silk/float/apply_sine_window_FLP.c',
	'external/krkrz/external/opus/silk/float/autocorrelation_FLP.c',
	'external/krkrz/external/opus/silk/float/burg_modified_FLP.c',
	'external/krkrz/external/opus/silk/float/bwexpander_FLP.c',
	'external/krkrz/external/opus/silk/float/corrMatrix_FLP.c',
	'external/krkrz/external/opus/silk/float/encode_frame_FLP.c',
	'external/krkrz/external/opus/silk/float/energy_FLP.c',
	'external/krkrz/external/opus/silk/float/find_LPC_FLP.c',
	'external/krkrz/external/opus/silk/float/find_LTP_FLP.c',
	'external/krkrz/external/opus/silk/float/find_pitch_lags_FLP.c',
	'external/krkrz/external/opus/silk/float/find_pred_coefs_FLP.c',
	'external/krkrz/external/opus/silk/float/inner_product_FLP.c',
	'external/krkrz/external/opus/silk/float/k2a_FLP.c',
	'external/krkrz/external/opus/silk/float/levinsondurbin_FLP.c',
	'external/krkrz/external/opus/silk/float/noise_shape_analysis_FLP.c',
	'external/krkrz/external/opus/silk/float/pitch_analysis_core_FLP.c',
	'external/krkrz/external/opus/silk/float/prefilter_FLP.c',
	'external/krkrz/external/opus/silk/float/process_gains_FLP.c',
	'external/krkrz/external/opus/silk/float/regularize_correlations_FLP.c',
	'external/krkrz/external/opus/silk/float/residual_energy_FLP.c',
	'external/krkrz/external/opus/silk/float/scale_copy_vector_FLP.c',
	'external/krkrz/external/opus/silk/float/scale_vector_FLP.c',
	'external/krkrz/external/opus/silk/float/schur_FLP.c',
	'external/krkrz/external/opus/silk/float/solve_LS_FLP.c',
	'external/krkrz/external/opus/silk/float/sort_FLP.c',
	'external/krkrz/external/opus/silk/float/warped_autocorrelation_FLP.c',
	'external/krkrz/external/opus/silk/float/wrappers_FLP.c',
	'external/krkrz/external/opus/silk/gain_quant.c',
	'external/krkrz/external/opus/silk/init_decoder.c',
	'external/krkrz/external/opus/silk/init_encoder.c',
	'external/krkrz/external/opus/silk/inner_prod_aligned.c',
	'external/krkrz/external/opus/silk/interpolate.c',
	'external/krkrz/external/opus/silk/lin2log.c',
	'external/krkrz/external/opus/silk/log2lin.c',
	'external/krkrz/external/opus/silk/pitch_est_tables.c',
	'external/krkrz/external/opus/silk/process_NLSFs.c',
	'external/krkrz/external/opus/silk/quant_LTP_gains.c',
	'external/krkrz/external/opus/silk/resampler.c',
	'external/krkrz/external/opus/silk/resampler_down2.c',
	'external/krkrz/external/opus/silk/resampler_down2_3.c',
	'external/krkrz/external/opus/silk/resampler_private_AR2.c',
	'external/krkrz/external/opus/silk/resampler_private_IIR_FIR.c',
	'external/krkrz/external/opus/silk/resampler_private_down_FIR.c',
	'external/krkrz/external/opus/silk/resampler_private_up2_HQ.c',
	'external/krkrz/external/opus/silk/resampler_rom.c',
	'external/krkrz/external/opus/silk/shell_coder.c',
	'external/krkrz/external/opus/silk/sigm_Q15.c',
	'external/krkrz/external/opus/silk/sort.c',
	'external/krkrz/external/opus/silk/stereo_LR_to_MS.c',
	'external/krkrz/external/opus/silk/stereo_MS_to_LR.c',
	'external/krkrz/external/opus/silk/stereo_decode_pred.c',
	'external/krkrz/external/opus/silk/stereo_encode_pred.c',
	'external/krkrz/external/opus/silk/stereo_find_predictor.c',
	'external/krkrz/external/opus/silk/stereo_quant_pred.c',
	'external/krkrz/external/opus/silk/sum_sqr_shift.c',
	'external/krkrz/external/opus/silk/table_LSF_cos.c',
	'external/krkrz/external/opus/silk/tables_LTP.c',
	'external/krkrz/external/opus/silk/tables_NLSF_CB_NB_MB.c',
	'external/krkrz/external/opus/silk/tables_NLSF_CB_WB.c',
	'external/krkrz/external/opus/silk/tables_gain.c',
	'external/krkrz/external/opus/silk/tables_other.c',
	'external/krkrz/external/opus/silk/tables_pitch_lag.c',
	'external/krkrz/external/opus/silk/tables_pulses_per_block.c',
	'external/krkrz/external/opus/src/analysis.c',
	'external/krkrz/external/opus/src/mlp.c',
	'external/krkrz/external/opus/src/mlp_data.c',
	'external/krkrz/external/opus/src/opus.c',
	'external/krkrz/external/opus/src/opus_decoder.c',
	'external/krkrz/external/opus/src/opus_encoder.c',
	'external/krkrz/external/opus/src/opus_multistream.c',
	'external/krkrz/external/opus/src/opus_multistream_decoder.c',
	'external/krkrz/external/opus/src/opus_multistream_encoder.c',
	'external/krkrz/external/opus/src/repacketizer.c',
	'external/krkrz/external/opusfile/src/http.c',
	'external/krkrz/external/opusfile/src/info.c',
	'external/krkrz/external/opusfile/src/internal.c',
	'external/krkrz/external/opusfile/src/opusfile.c',
	'external/krkrz/external/opusfile/src/stream.c',
	'external/krkrz/external/opusfile/src/wincerts.c',
	'external/krkrz/external/zlib/adler32.c',
	'external/krkrz/external/zlib/compress.c',
	'external/krkrz/external/zlib/crc32.c',
	'external/krkrz/external/zlib/deflate.c',
	'external/krkrz/external/zlib/infback.c',
	'external/krkrz/external/zlib/inffast.c',
	'external/krkrz/external/zlib/inflate.c',
	'external/krkrz/external/zlib/inftrees.c',
	'external/krkrz/external/zlib/trees.c',
	'external/krkrz/external/zlib/uncompr.c',
	'external/krkrz/external/zlib/zutil.c',
	'src/core/base/sdl2/NativeEventQueue.cpp',
	'src/core/base/sdl2/PluginImpl.cpp',
	'src/core/base/sdl2/StorageImpl.cpp',
	'src/core/base/sdl2/SysInitImpl.cpp',
	'src/core/base/sdl2/SystemImpl.cpp',
	'src/core/environ/sdl2/Application.cpp',
	'src/core/environ/sdl2/SystemControl.cpp',
	'src/core/sdl2/SDLApplication.cpp',
	'src/core/sound/sdl2/WaveMixer.cpp',
	'src/plugins/InternalPlugins.cpp',
	'src/plugins/KAGParser.cpp',
	'src/plugins/csvParser.cpp',
	'src/plugins/fftgraph.cpp',
	'src/plugins/getSample.cpp',
	'src/plugins/ncbind/ncbind.cpp',
	'src/plugins/saveStruct.cpp',
	'src/plugins/varfile.cpp',
	'src/plugins/win32dialog.cpp',
	'src/plugins/wutcwf.cpp',
]
krkrsdl2_includes = [
	'src/core/base/sdl2',
	'src/core/environ/sdl2',
	'src/core/sound/sdl2',
	'external/krkrz',
	'external/krkrz/base',
	'external/krkrz/base/android',
	'external/krkrz/base/stub',
	'external/krkrz/base/win32',
	'external/krkrz/environ',
	'external/krkrz/environ/win32',
	'external/krkrz/environ/android',
	'external/krkrz/extension',
	'external/krkrz/msg',
	'external/krkrz/msg/win32',
	'external/krkrz/sound',
	'external/krkrz/sound/win32',
	'external/krkrz/tjs2',
	'external/krkrz/utils',
	'external/krkrz/utils/win32',
	'external/krkrz/visual',
	'external/krkrz/visual/gl',
	'external/krkrz/visual/win32',
	'external/krkrz/external',
	'external/krkrz/external/freetype/include',
	'external/krkrz/external/freetype/src',
	'external/krkrz/external/freetype/devel',
	'external/krkrz/external/libjpeg-turbo',
	'external/krkrz/external/libogg/include',
	'external/krkrz/external/lpng',
	'external/krkrz/external/onig',
	'external/krkrz/external/onig/src',
	'external/krkrz/external/libogg/include',
	'external/krkrz/external/opus/celt',
	'external/krkrz/external/opus/include',
	'external/krkrz/external/opus/silk',
	'external/krkrz/external/opus/silk/fixed',
	'external/krkrz/external/opus/silk/float',
	'external/krkrz/external/opusfile/include',
	'external/krkrz/external/opusfile/src',
	'external/krkrz/external/zlib',
	'src/config',
	'src/plugins',
]
krkrsdl2_cflags = []
krkrsdl2_cflags += [
	'-DTVP_OPUS_DECODER_IMPLEMENT',
	'-DHAVE_CONFIG_H',
	'-DFT2_BUILD_LIBRARY',
	'-DUSE_ALLOCA',
	'-DOPUS_BUILD',
	'-DHAVE_LRINTF',
	'-DHAVE_LRINT',
	'-DFLOAT_APPROX',
]
if target_machine.system() == 'emscripten'
	krkrsdl2_cflags += [
		'-s', 'DISABLE_EXCEPTION_CATCHING=0',
		'-s', 'EXIT_RUNTIME=1',
	]
endif
krkrsdl2_cppflags = []
krkrsdl2_cppflags += krkrsdl2_cflags
krkrsdl2_cppflags += ['-std=c++11']
if cxx.get_id() == 'gcc'
	krkrsdl2_cppflags += ['-fno-delete-null-pointer-checks']
endif
krkrsdl2_ldflags = []
if target_machine.system() == 'linux'
	krkrsdl2_ldflags += ['-pthread']
endif
if target_machine.system() == 'emscripten'
	krkrsdl2_ldflags += [
		'-s', 'DISABLE_EXCEPTION_CATCHING=0',
		'-s', 'EXIT_RUNTIME=1',
		'-s', 'ALLOW_MEMORY_GROWTH=1',
		'--no-heap-copy',
		'--preload-file', join_paths(meson.source_root(), 'data') + '@/data',
	]
endif
krkrsdl2_dependson = [
	sdl2_dep,
]
krkrsdl2 = executable('krkrsdl2', sources: krkrsdl2_src, c_args: krkrsdl2_cflags, cpp_args: krkrsdl2_cppflags, link_args: krkrsdl2_ldflags, include_directories: include_directories(krkrsdl2_includes), dependencies: krkrsdl2_dependson, install: true)
